--- a/src/_data/home.yml
+++ b/src/_data/home.yml
@@ -3,7 +3,10 @@ en:
   video:
     title: "TOP QUALITY CROWN CORKS"
     subtitle: "Manufacturing bespoke excellence"
-    videoLocation: "/assets/video/home/home"
+    videomp4: "/assets/video/home/home.mp4"
+    videowebm: "/assets/video/home/home.webm"
+    videoogv: "/assets/video/home/home.ogv"
+    videoPoster: "/assets/video/home/home.jpg"
     WatchFullVideo: true
     WatchVideoLinkText: "WATCH VIDEO"
     FullVideoURL: "https://www.youtube.com/watch?v=jay3CnBcUGU"
