--- a/src/_data/why-crown-corks.yml
+++ b/src/_data/why-crown-corks.yml
@@ -13,9 +13,9 @@ en:
     variantClasses: "viewport-height odd"
     layout: "layout-two-column"
     id: "why-crown-works"
-    bgImage: "/images/why-crown-corks.jpg"
-    bgImagePosition: "right top"
-    bgImageSize: "auto"
+    bgImage: "/images/william-painter.jpg"
+    bgImagePosition: "right bottom"
+    bgImageSize: "auto 100%"
   performance:
     title: "Performance"
     title_variantClasses: "title--large"
@@ -24,9 +24,9 @@ en:
     variantClasses: "on-brand-color viewport-height"
     layout: "layout-two-column"
     id: "performance"
-    bgImage: "/images/why-crown-corks.jpg"
-    bgImagePosition: "left top"
-    bgImageSize: "auto"
+    bgImage: "/images/why-crown-performance.jpg"
+    bgImagePosition: "left bottom"
+    bgImageSize: "auto 90%"
   taste:
     title: "Taste"
     title_variantClasses: "title--large"
