--- a/src/_data/why-crown-corks.yml
+++ b/src/_data/why-crown-corks.yml
@@ -10,7 +10,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "WHY CROWN CORKS"
     body: "The crown cork - also known as a crown seal, a crown cap or just a cap - was invented by William Painter in 1892 and is the first form of bottle cap that revolutionized the bottling industry. Since then this small metal closure marked a significant technological development, yet its essential design remains unaltered until this day. Because it’s perfect."
-    variantClasses: "viewport-height odd"
+    variantClasses: "viewport-height odd vertically-centered"
     layout: "layout-two-column"
     id: "why-crown-works"
     bgImage: "/images/william-painter.jpg"
@@ -21,7 +21,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "WHY CROWN CORKS"
     body: "Iconic design, functional simplicity and consistent reliability are the key elements that make crown caps the proven choice for the bottling industry. They seal glass bottles extremely efficiently and offer longer expiration time against other packaging materials; and they are cheap. Thanks to its simple and streamlined shape, the crown cork is fully compatible with any production method, providing high speed continuous bottling. That’s why bottle makers and beverage manufactures trust crown corks."
-    variantClasses: "on-brand-color viewport-height"
+    variantClasses: "on-brand-color viewport-height vertically-centered"
     layout: "layout-two-column"
     id: "performance"
     bgImage: "/images/why-crown-performance.jpg"
@@ -32,7 +32,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "WHY CROWN CORKS"
     body: "The crown cork combined with glass bottling bring the best of your product’s original flavor and taste. Beers and soft drinks sealed with crown corks are chilled faster in the fridge, avoiding taste alteration caused by ice. Enjoy freshness!"
-    variantClasses: "on-dark-color viewport-height odd"
+    variantClasses: "on-dark-color viewport-height odd vertically-centered"
     layout: "layout-two-column"
     id: "taste"
     bgImage: "/images/why-crown-corks.jpg"
@@ -43,7 +43,7 @@ en:
     title_variantClasses: "title--large"
     subtitle: "WHY CROWN CORKS"
     body: "The crown cork is the safest of all closures. Complementing rigid glass bottles, it offers superior barrier protection from oxygen, bacteria or environmental changes. A crown cork sealed bottle offers tamper evidence, minimises contamination risk, safely securing your brand and content."
-    variantClasses: "on-dark-color viewport-height"
+    variantClasses: "on-dark-color viewport-height vertically-centered"
     layout: "layout-two-column"
     id: "safety"
     bgImage: "/images/why-crown-corks.jpg"
