--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -24,10 +24,10 @@ The turning point in the company’s recent history was in 2004 with its strateg
 Since then, having invested in excess of €20m, our internationally accredited and compliant infrastructure and our fully automated production processes, contributed to elevating Astir to one of the best manufacturing facilities in Europe, and among the most sophisticated in the world.
 In 2014, the group launched another manufacturing plant in Canada, boosting production capacity and improving its access to North America
 Today, Astir sells its products to more than 45 countries across 5 continents serving more than 400 different clients, including the largest bottlers in the world."
-    image: http://lorempixel.com/400/200/sports/2
-    bgImage: "/images/why-crown-corks.jpg"
+    image: "/images/company/History-Kapakia.jpg"
+    bgImage: "/images/company/History-Back.jpg"
     bgImagePosition: "right top"
-    bgImageSize: "auto"
+    bgImageSize: "60% auto"
     variantClasses: "text--centered on-brand-color"
     layout: "layout-stacked"
     id: "history"
