--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -18,12 +18,12 @@ en:
     title: "Traditionally Innovative Since 1953"
     title_variantClasses: "title--large"
     subtitle: "OUR HISTORY"
-    body: "Founded by George Vitogiannis in 1953, initially as a small soft drinks bottler for the local market, Astir blossomed to a world renowned crown corks manufacturer.
-In 1983, the company relocated close to the center of Athens, became a societe anonyme and entered a new growth chapter in its development.
-The turning point in the company’s recent history was in 2004 with its strategic investment in a new plant in the industrial park of Avlona near Athens.
-Since then, having invested in excess of €20m, our internationally accredited and compliant infrastructure and our fully automated production processes, contributed to elevating Astir to one of the best manufacturing facilities in Europe, and among the most sophisticated in the world.
-In 2014, the group launched another manufacturing plant in Canada, boosting production capacity and improving its access to North America
-Today, Astir sells its products to more than 45 countries across 5 continents serving more than 400 different clients, including the largest bottlers in the world."
+    body: "&ndash; Founded by George Vitogiannis in 1953, initially as a small soft drinks bottler for the local market, Astir blossomed to a world renowned crown corks manufacturer.<br/>
+&ndash; In 1983, the company relocated close to the center of Athens, became a societe anonyme and entered a new growth chapter in its development.<br/>
+&ndash; The turning point in the company’s recent history was in 2004 with its strategic investment in a new plant in the industrial park of Avlona near Athens.<br/>
+&ndash; Since then, having invested in excess of €20m, our internationally accredited and compliant infrastructure and our fully automated production processes, contributed to elevating Astir to one of the best manufacturing facilities in Europe, and among the most sophisticated in the world.<br/>
+&ndash; In 2014, the group launched another manufacturing plant in Canada, boosting production capacity and improving its access to North America.<br/>
+&ndash; Today, Astir sells its products to more than 45 countries across 5 continents serving more than 400 different clients, including the largest bottlers in the world."
     image: "/images/company/History-Kapakia.jpg"
     bgImage: "/images/company/History-Back.jpg"
     bgImagePosition: "right top"
