adding images and videos

--- a/src/_data/certificates.yml
+++ b/src/_data/certificates.yml
@@ -3,15 +3,15 @@ en:
   0:
     title: "FOOD SAFETY"
     title_variantClasses: "title--small"
-    image: http://lorempixel.com/400/200/sports/2
+    image: "/images/logistics/certificate.png"
   1:
     title: "ENVIRONMENTAL"
     title_variantClasses: "title--small"
-    image: http://lorempixel.com/400/200/sports/2
+    image: "/images/logistics/certificate.png"
   2:
     title: "HIGH HYGIENE"
     title_variantClasses: "title--small"
-    image: http://lorempixel.com/400/200/sports/2  
+    image: "/images/logistics/certificate.png"
 el:
   production:
     title: "Ελληνικα State of the art plant"
