--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-jshint": "^1.8.5",
     "gulp-load-plugins": "^0.8.0",
     "gulp-minify-css": "^0.3.10",
+    "gulp-minify-inline": "^0.2.1",
     "gulp-rev-all": "^0.7.5",
     "gulp-rev-replace": "^0.3.1",
     "gulp-sass": "^2.0.4",
