--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -3,7 +3,8 @@ en:
   video:
     title: "60 YEARS OLD BUT FRESH "
     subtitle: "Combining the taste of tradition with our passion for innovation, we craft high-quality crown corks that help brands enhance the value of their products and build strong customer relationships."
-    videoLocation: "/assets/video/company/company"
+    videomp4: "/assets/video/company/company.mp4"
+    videoPoster: "/assets/video/company/company.jpg"
     WatchFullVideo: false
   about:
     title: "Crowning An art of its own"
@@ -24,7 +25,7 @@ en:
 &ndash; Since then, having invested in excess of €20m, our internationally accredited and compliant infrastructure and our fully automated production processes, contributed to elevating Astir to one of the best manufacturing facilities in Europe, and among the most sophisticated in the world.<br/>
 &ndash; In 2014, the group launched another manufacturing plant in Canada, boosting production capacity and improving its access to North America.<br/>
 &ndash; Today, Astir sells its products to more than 45 countries across 5 continents serving more than 400 different clients, including the largest bottlers in the world."
-    image: "/images/company/History-Kapakia.jpg"
+    image: "/images/company/History-Kapakia.png"
     bgImage: "/images/company/History-Back.jpg"
     bgImagePosition: "right top"
     bgImageSize: "60% auto"
