--- a/src/_data/logistics.yml
+++ b/src/_data/logistics.yml
@@ -3,20 +3,21 @@ en:
   video:
     title: "LOGISTICS"
     subtitle: "Above the picture: Astir strives in removing uncertainties from any client’s supply chain. From order to delivery we exceed our clients expectations and provide a fully flexible unparalleled offering."
-    videoLocation: "/assets/video/logistics/logistics"
+    videomp4: "/assets/video/logistics/specifications.mp4"
+    videoPoster: "/assets/video/home/home.jpg"
     WatchFullVideo: false
   supply-chain:
     title: "Supply Chain optimisation"
     title_variantClasses: "title--large"
     subtitle: "SHORT LEAD TIMES"
     body: "Maximize efficiency, eliminate distance, time and cost. Astir’s manufacturing expertise, flexibility and direct customer approach sets new standards for business credibility, product quality, lead time and after sales service.
-
+<br/>
     Vertical integration from in-house prepress to all stages of the manufacturing process guarantees your order will be delivered on time.
-
+<br/>
 Send us your specific requirements and once the order is placed, our creative team develops your artwork and your file is approved in as little as 24 hours. Manufacturing process starts and, in record lead times, outstanding fault free crown caps arrive to your doorstep.
-
+<br/>
 Delivery transit time may vary depending on destination, yet our global reach handled by our experienced export department, ensure that Astir crown corks reach any destination by sea, truck, rail or even by air."
-    image: http://lorempixel.com/400/200/sports/2
+    image: "/images/logistics/Supply-Chain.png"
     variantClasses: "slice--with-centered-image"
     layout: "layout-two-column"
     id: "supply-chain"
@@ -25,7 +26,7 @@ Delivery transit time may vary depending on destination, yet our global reach ha
     title_variantClasses: "title--large"
     subtitle: "PACKAGING"
     body: "Crowns are shipped in large quantities and to many international destinations. As a result, rigid packaging is deployed. There are two main alternatives:"
-    variantClasses: "text--centered"
+    variantClasses: "text--centered grey-background"
     layout: "layout-stacked"
     id: "packaging"
   quality-standards:
