--- a/src/_data/why-crown-corks.yml
+++ b/src/_data/why-crown-corks.yml
@@ -3,7 +3,8 @@ en:
   video:
     title: "WHY CROWN CORKS"
     subtitle: "For more than 100 years, the crown cork safely seals and preserves the freshness of beers and beverages as no other alternative."
-    videoLocation: "/assets/video/corks/corks"
+    videomp4: "/assets/video/why-crown-corks/why-crown-corks.mp4"
+    videoPoster: "/assets/video/home/home.jpg"
     WatchFullVideo: false
   why:
     title: "The perfect closure"
@@ -35,7 +36,7 @@ en:
     variantClasses: "on-dark-color viewport-height odd vertically-centered"
     layout: "layout-two-column"
     id: "taste"
-    bgImage: "/images/why-crown-corks.jpg"
+    bgImage: "/images/homepage/Perfect-Closure-Back.jpg"
     bgImagePosition: "right top"
     bgImageSize: "cover"
   safety:
@@ -46,7 +47,7 @@ en:
     variantClasses: "on-dark-color viewport-height vertically-centered"
     layout: "layout-two-column"
     id: "safety"
-    bgImage: "/images/why-crown-corks.jpg"
+    bgImage: "/images/safety.jpg"
     bgImagePosition: "right top"
     bgImageSize: "cover"
 
