--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-cache": "~0.2.2",
     "gulp-cached": "^1.0.1",
     "gulp-changed": "^1.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-filter": "^2.0.0",
     "gulp-gh-pages": "0.5.4",
     "gulp-gzip": "0.0.8",
@@ -22,6 +23,7 @@
     "gulp-load-plugins": "^0.8.0",
     "gulp-minify-css": "^0.3.10",
     "gulp-minify-inline": "^0.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-rev-all": "^0.7.5",
     "gulp-rev-replace": "^0.3.1",
     "gulp-sass": "^2.0.4",
